# nursing-ros-demo

./: README.md
demo_gazebo/aid/config/: aid_gazebo_control.yaml
demo_gazebo/aid/launch/: aid_simulation.launch
demo_gazebo/aid_moveit_config/launch/: moveit_planning_execution.launch
nursing_controller/: CMakeLists.txt  package.xml
nursing_controller/script/nursing_controller/: nursing_robot_simulator
nursing_controller/src/: joint_trajectory_action.cpp
nursing_description/: CMakeLists.txt  package.xml  urdf.rviz
nursing_description/config/: joint_names_arm_arm.yaml  nursing_gazebo_control.yaml
nursing_description/launch/: display.launch  gazebo.launch  nursing_simulation.launch
nursing_description/meshes/: base_link.STL  bigarm_Link.STL  door.STL  door_fridge.STL  drawer_cabinet.STL  elbow_Link.STL  finger_pulp_Link4.STL  finger_root_Link1.STL  finger_tip_Link4.STL  forearm_Link.STL  palm_Link.STL  shoulder_Link.STL  thumb_pulp_Link.STL  thumb_root_Link.STL  thumb_tip_Link.STL  wrist_Link.STL  wrist_palm_Link.STL
nursing_description/urdf/: nursing_robot.urdf
nursing_driver/: CMakeLists.txt  package.xml
nursing_driver/include/nursing_driver/: NursingDriver.h  NursingMetaType.h  SocketCommunicator.h
nursing_driver/src/: DriverNode.cpp  NursingDriver.cpp  SocketCommunicator.cpp  client.cpp  nursing_gazebo_driver.cpp  server.cpp
nursing_robot_moveit_config/: CMakeLists.txt  package.xml
nursing_robot_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  kinematics.yaml  nursing_robot.srdf  ompl_planning.yaml  ros_controllers.yaml
nursing_robot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  nursing_robot_moveit_controller_manager.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
